# HybriTE

./: .gitignore  LICENSE  README.md  config.yaml  environment.yaml  generate_figures.py  predict.py  predict_all_folds.sh  predict_cross_species.py  pyproject.toml  train.py  train_fold.py
framework/: __init__.py  base.py  callbacks.py  config.py  loggers.py  losses.py  metrics.py  optimizers.py  registry.py  schedulers.py  utils.py
plugins/hybrite/: __init__.py  config.yaml  datamodule.py  model.py
scripts/: aggregate_models.py  explain_model.py  generate_graphs.py  generate_graphs_no_structure.py  prepare_data.py
